--- a/beans/build.xml
+++ b/beans/build.xml
@@ -18,34 +18,28 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
-
-  <patternset id="beans.files">
-      <include name="modules/beans.jar"/>
-  </patternset>
 
   <target name="compile">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
         <pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
-	<pathelement location="${build}/modules/java.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
+	<pathelement location="../java/netbeans/modules/java.jar"/>
 	<pathelement location="{java.home}/lib/tools.jar"/>
       </classpath>
     </javac>
   </target>
-  
   <target name="jars" depends="compile">
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
-    <mkdir dir="${build}/modules"/>
+    <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/beans.jar"
+    <locjar jarfile="netbeans/modules/beans.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -57,17 +51,13 @@ Microsystems, Inc. All Rights Reserved.
   </target>
   
   <target name="netbeans" depends="jars">
-    <genlist outputfiledir="${build}" module="modules/beans.jar">
-        <fileset dir="${build}">
-            <patternset refID="beans.files"/>
-        </fileset>
-    </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
  
   <target name="nbm" depends="netbeans">
     <makenbm file="beans.nbm"
-             productDir="${build}"
-             module="modules/beans.jar"
+             topdir="."
+             module="netbeans/modules/beans.jar"
 	     homepage="http://beans.${homepage.base}/"
 	     distribution="http://${dist.base}/beans.nbm">
       <license file="${license.file}"/>
@@ -79,13 +69,12 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="beans.files"/>
-      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="beans.nbm"/>
+    <delete dir="netbeans"/>
     <delete dir="javadoc"/>
+    <delete dir="Info"/>
   </target>
 
   <target name="javadoc" description="Build beans module API documentation.">
