--- a/core.windows/build.xml
+++ b/core.windows/build.xml
@@ -18,22 +18,17 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
     <property name="license.file" location="../../nbbuild/standard-nbm-license.txt"/>
-    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
     <property name="xml-apis" value="xml-apis.jar"/>
 
-    <patternset id="core/windows.files">
-        <include name="lib/core-windows.jar"/>
-    </patternset>
-
     <target name="jars">
-        <mkdir dir="${build}/lib"/>
+        <mkdir dir="netbeans/lib"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="${build}/lib/core-windows.jar"
+        <locjar jarfile="netbeans/lib/core-windows.jar"
                 basedir="src"
                 manifest="manifest-subst.mf"
                 excludesfile="../../nbbuild/standard-jar-excludes.txt"
@@ -43,17 +38,13 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars">
-        <genlist outputfiledir="${build}" module="lib/core-windows.jar">
-            <fileset dir="${build}">
-                <patternset refID="core/windows.files"/>
-            </fileset>
-        </genlist>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="nbm" depends="netbeans">
         <makenbm file="core-windows.nbm"
-                 productDir="${build}"
-                 module="lib/core-windows.jar"
+                 topdir="."
+                 module="netbeans/lib/core-windows.jar"
                  homepage="http://core.${homepage.base}/"
                  distribution="http://${dist.base}/core-windows.nbm">
             <license file="${license.file}"/>
@@ -66,11 +57,10 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="src">
                 <include name="**/*.class"/>
             </fileset>
-            <fileset dir="${build}">
-                <patternset refID="core/windows.files"/>
-            </fileset>
         </delete>
+        <delete dir="netbeans"/>
         <delete file="core-windows.nbm"/>
+        <delete dir="Info"/>
         <delete file="manifest-subst.mf"/>
     </target>
 
