--- a/diff/build.xml
+++ b/diff/build.xml
@@ -22,7 +22,6 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
@@ -30,20 +29,16 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="makelayer" classname="org.netbeans.nbbuild.MakeLayer" classpath="${nbext}/nbantext.jar"/>
 
-  <patternset id="diff.files">
-    <include name="modules/diff.jar"/>
-  </patternset>
-
   <target name="compile">
     <javac srcdir="src" 
         deprecation="${build.compiler.deprecation}" 
         debug="${build.compiler.debug}"
         destdir="src">
       <classpath>
-        <pathelement location="${build}/modules/ext/nb-editor.jar"/>
+        <pathelement location="../editor/netbeans/modules/ext/nb-editor.jar"/>
 	<pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
         <fileset dir="${nbroot}/core/external">
           <include name="regexp*.jar"/>
         </fileset>
@@ -52,10 +47,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="${build}/modules"/>
+    <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/diff.jar"
+    <locjar jarfile="netbeans/modules/diff.jar"
          manifest="manifest-subst.mf"
          basedir="src"
          excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"
@@ -65,17 +60,13 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-      <genlist outputfiledir="${build}" module="modules/diff.jar">
-          <fileset dir="${build}">
-	      <patternset refID="diff.files"/>
-          </fileset>
-      </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="diff.nbm"
-             productDir="${build}"
-	     module="modules/diff.jar"
+             topdir="."
+	     module="netbeans/modules/diff.jar"
 	     homepage="http://diff.${homepage.base}/"
 	     distribution="http://${dist.base}/diff.nbm">
       <license file="${license.file}"/>
@@ -141,12 +132,11 @@ Microsystems, Inc. All Rights Reserved.
         <include name="**/*.class"/>
         <include name="**/*.jar"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="diff.files"/>
-      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="diff.nbm"/>
+    <delete dir="netbeans"/>
+    <delete dir="Info"/>
   </target>
 
     <target name="apichanges-check" description="Check syntax of API changes list. Requires Ant 1.4!">
