--- a/extbrowser/build.xml
+++ b/extbrowser/build.xml
@@ -18,16 +18,10 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
-
-  <patternset id="extbrowser.files">
-    <include name="modules/extbrowser.jar"/>
-    <include name="modules/bin/extbrowser.dll"/>
-  </patternset>
 
   <target name="compile">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
@@ -35,17 +29,17 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
         <!--<pathelement location="patches"/>-->
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
       </classpath>
     </javac>
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="${build}/modules"/>
+    <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/extbrowser.jar"
+    <locjar jarfile="netbeans/modules/extbrowser.jar"
          manifest="manifest-subst.mf"
          basedir="src"
 	 excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -55,7 +49,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release">
-    <copy todir="${build}">
+    <copy todir="netbeans">
       <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt">
         <exclude name="**/sources/*"/>
       </fileset>
@@ -63,17 +57,13 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars,release">
-      <genlist outputfiledir="${build}" module="modules/extbrowser.jar">
-          <fileset dir="${build}">
-	      <patternset refID="extbrowser.files"/>
-          </fileset>
-      </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="extbrowser.nbm"
-             productDir="${build}"
-             module="modules/extbrowser.jar"
+             topdir="."
+             module="netbeans/modules/extbrowser.jar"
 	     homepage="http://extbrowser.${homepage.base}/"
 	     distribution="http://${dist.base}/extbrowser.nbm">
       <license file="${license.file}"/>
@@ -86,18 +76,17 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="org/netbeans/modules/extbrowser/*.class"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="extbrowser.files"/>
-      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="extbrowser.nbm"/>
+    <delete dir="netbeans"/>
     <delete dir="javadoc"/>
+    <delete dir="Info"/>
   </target>
 
   <!-- This target will only work *inside* the IDE! -->
   <target name= "test" depends="jars" description="Test the module inside the running IDE." >
-    <nbinstaller action="reinstall" module="${build}/modules/extbrowser.jar"/>
+    <nbinstaller action="reinstall" module="netbeans/modules/extbrowser.jar"/>
   </target>
 
   <target name="javadoc" description="Build applet module API documentation.">
