--- a/j2eeserver/build.xml
+++ b/j2eeserver/build.xml
@@ -20,7 +20,6 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <property name="stubtarget" value="testbase/src"/>
   
@@ -28,28 +27,21 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext}/nbantext.jar"/>
 
-  <patternset id="j2eeserver.files">
-    <include name="modules/autoload/j2eeserver.jar"/>
-  </patternset>
-
   <!-- These are the primary targets. -->
 
-  <target name="netbeans" depends="jars">
-      <genlist outputfiledir="${build}" module="modules/autoload/j2eeserver.jar">
-          <fileset dir="${build}">
-	      <patternset refID="j2eeserver.files"/>
-          </fileset>
-      </genlist>
+  <target depends="jars" name="netbeans">
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="j2eeserver.nbm"
-             productDir="${build}"
-             module="modules/autoload/j2eeserver.jar"
+             topdir="."
+             module="netbeans/modules/autoload/j2eeserver.jar"
              homepage="http://${homepage.base}/j2eeserver.html"
              distribution="http://${dist.base}/j2eeserver.nbm">
       <license file="${license.file}" />
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
+      <exclude name="**/nondist/**" />
     </makenbm>
   </target>
 
@@ -59,10 +51,9 @@ Microsystems, Inc. All Rights Reserved.
         <include name="**/*.class"/>
         <include name="**/*.jar"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="j2eeserver.files"/>
-     </fileset>
     </delete>
+    <delete dir="netbeans"/>
+    <delete dir="Info"/>
     <delete file="j2eeserver.nbm"/>
     <delete file="manifest-subst.mf"/>
   </target>
@@ -103,6 +94,9 @@ Microsystems, Inc. All Rights Reserved.
         <fileset dir="${nbroot}/openide/netbeans/lib">
                 <include name="openide*.jar"/>
         </fileset>
+        <!-- orion_ea requires logger !!!
+        <pathelement location="${nbroot}/logger/netbeans/lib/ext/logger.jar"/>
+        -->
         <pathelement location="${nbroot}/jarpackager/netbeans/modules/jarpackager.jar"/>
         <pathelement location="${nbroot}/debuggerjpda/netbeans/modules/jpdaDebugger.jar"/>
       </classpath>
@@ -136,15 +130,13 @@ Microsystems, Inc. All Rights Reserved.
 
   <!-- These are the secondary targets. -->
 
-  <target name="jars" depends="compile" >
-    <mkdir dir="${build}/modules/autoload"/>
+  <target depends="compile" name="jars">
+    <mkdir dir="netbeans/modules/autoload"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
-    <copy file="manifest.mf" 
-          tofile="manifest-subst.mf"
+    <copy file="manifest.mf" tofile="manifest-subst.mf"
           filtering="on"/>
-    <locjar compress="false" 
-            jarfile="${build}/modules/autoload/j2eeserver.jar"
-	    manifest="manifest-subst.mf">
+
+    <locjar compress="false" jarfile="netbeans/modules/autoload/j2eeserver.jar" manifest="manifest-subst.mf">
       <locale name="ja"/>
       <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
     </locjar>
@@ -157,12 +149,12 @@ Microsystems, Inc. All Rights Reserved.
         <fileset dir="${nbroot}/openide/netbeans/lib">
                 <include name="openide*.jar"/>
         </fileset>
-        <pathelement location="${build}/lib/ext/logger.jar"/>
-        <pathelement location="${build}/modules/jarpackager.jar"/>
-        <pathelement location="${build}/modules/jpdaDebugger.jar"/>
-        <pathelement location="${build}/modules/autoload/debuggerCore.jar"/>
+        <pathelement location="${nbroot}/logger/netbeans/lib/ext/logger.jar"/>
+        <pathelement location="${nbroot}/jarpackager/netbeans/modules/jarpackager.jar"/>
+        <pathelement location="${nbroot}/debuggerjpda/netbeans/modules/jpdaDebugger.jar"/>
+        <pathelement location="${nbroot}/debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
         <pathelement location="${jdkhome}/lib/tools.jar"/>
-        <pathelement location="${build}/modules/autoload/j2eeserver.jar"/>
+        <pathelement location="netbeans/modules/autoload/j2eeserver.jar"/>
       </classpath>
     </javac>
   </target>
@@ -171,18 +163,27 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}" excludes="org/netbeans/modules/j2ee/deployment/model/**,org/netbeans/modules/j2ee/deployment/support/**">
       <classpath>
         <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-compiler.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-io.jar"/> <!-- used indirectly, not imported -->
+        <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
+        <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
+        <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
+        <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/> <!-- used indirectly, not imported -->
+        <pathelement location="${nbroot}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
         <pathelement location="${jdkhome}/lib/tools.jar"/>
-        <pathelement location="${build}/modules/jarpackager.jar"/>
-        <pathelement location="${build}/modules/jpdaDebugger.jar"/>
-        <pathelement location="${build}/modules/autoload/debuggerCore.jar"/>
+        <!-- orion_ea requires logger !!!
+        <pathelement location="${nbroot}/logger/netbeans/lib/ext/logger.jar"/>
+        -->
+        <pathelement location="${nbroot}/jarpackager/netbeans/modules/jarpackager.jar"/>
+        <pathelement location="${nbroot}/debuggerjpda/netbeans/modules/jpdaDebugger.jar"/>
+        <pathelement location="${nbroot}/debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
       </classpath>
     </javac>
+  </target>
+
+  <target name="release">
+    <copy todir="netbeans">
+      <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
+    </copy>
   </target>
 
   <target name="setup-jdkhome-1">
@@ -204,7 +205,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <!-- This target will only work *inside* the IDE!
   <target depends="netbeans" description="Test the module inside the running IDE." name="test">
-    <nbinstaller action="reinstall" module="${build}/modules/j2eeserver.jar"/>
+    <nbinstaller action="reinstall" module="netbeans/modules/j2eeserver.jar"/>
   </target> -->
 
 
