--- a/lexer.editorbridge/build.xml
+++ b/lexer.editorbridge/build.xml
@@ -18,8 +18,8 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../../nbbuild/standard-nbm-license.txt"/>
+  <property name="binroot" location="../../../nbextra"/>
   <property name="nbroot" location="../.."/>
-  <property name="build" location="../nbbuild/netbeans"/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
 
   <!-- Patterns for sources that need openide util or antlr classes -->
@@ -35,31 +35,40 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
 
-  <patternset id="lexer/editorbridge.files">
-    <include name="modules/lexer-editorbridge.jar"/>
-  </patternset>
+<!-- this have to be done in nbbuild/build.xml in target all-lexer/editorbridge
+     using dependencies! It's necessary for NbMerge to know about that
+     dependency -->
+<!--
+  <target name="build-lexer">
+    <ant dir=".." target="netbeans" inheritAll="false"/>
+    <ant dir="../../editor" target="netbeans" inheritAll="false"/>
+  </target>
+-->
 
+<!--
+  <target name="compile" depends="build-lexer">
+-->
   <target name="compile">
     <javac srcdir="src" destdir="src"
            excludes="${src.openide.util},${src.antlr}"
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
       <classpath>
-        <pathelement location="${build}/lib/ext/xml-apis-1.0b2.jar"/>
+        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
         <pathelement location="${xmlparser}"/>
-	<pathelement location="../tmp"/>
-        <pathelement location="${build}/modules/lexer.jar"/>
-        <pathelement location="${build}/modules/ext/nb-editor.jar"/>
-        <pathelement location="${build}/modules/editor.jar"/>
+        <pathelement location="../tmp"/>
+        <pathelement location="../netbeans/modules/lexer.jar"/>
+        <pathelement location="../../editor/netbeans/modules/ext/nb-editor.jar"/>
+        <pathelement location="../../editor/netbeans/modules/editor.jar"/>
       </classpath>
     </javac>
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="${build}/modules"/>
+    <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/lexer-editorbridge.jar"
+    <locjar jarfile="netbeans/modules/lexer-editorbridge.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="../../nbbuild/standard-jar-excludes.txt"
@@ -69,18 +78,14 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-      <genlist outputfiledir="${build}" module="modules/lexer-editorbridge.jar">
-          <fileset dir="${build}">
-	      <patternset refID="lexer/editorbridge.files"/>
-          </fileset>
-      </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
 
   <target name="nbm" depends="netbeans">
     <makenbm file="lexer-editorbridge.nbm"
-             productDir="${build}"
-	     module="modules/lexer-editorbridge.jar"
+             topdir="."
+	     module="netbeans/modules/lexer-editorbridge.jar"
 	     homepage="http://lexer.${homepage.base}/"
 	     distribution="http://${dist.base}/lexer-editorbridge.nbm">
       <license file="${license.file}"/>
@@ -94,12 +99,11 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="lexer/editorbridge.files"/>
-      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="lexer-editorbridge.nbm"/>
+    <delete dir="netbeans"/>
+    <delete dir="Info"/>
   </target>
 
 </project>
