--- a/openide.io/build.xml
+++ b/openide.io/build.xml
@@ -24,15 +24,10 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
     <property name="license.file" value="${nb_all}/nbbuild/standard-nbm-license.txt"/>
-    <property name="build" location="../../nbbuild/netbeans"/>
-
-    <patternset id="openide/io.files">
-       <include name="modules/autoload/openide-io.jar"/>
-    </patternset>
 
     <path id="cp">
         <pathelement location="${nb_all}/openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
+        <pathelement location="${nb_all}/openide/netbeans/lib/openide.jar"/>
     </path>
   
     <target name="compile">
@@ -45,9 +40,9 @@ Microsystems, Inc. All Rights Reserved.
              classpath="${nb_all}/nbbuild/nbantext.jar"/>
         <enhanceclass basedir="src">
             <classpath>
-               <pathelement location="${build}/lib/ext/boot.jar"/>
-               <!-- See xtest/instance/build-clover.xml for explanation: -->
-               <pathelement location="${build}/lib/ext/clover.jar"/>
+                <pathelement location="../../core/netbeans/lib/ext/boot.jar"/>
+                <!-- See xtest/instance/build-clover.xml for explanation: -->
+                <pathelement location="../../core/netbeans/lib/ext/clover.jar"/>
             </classpath>
             <!-- Making public -->
             <patch class="org/openide/windows/InputOutput$$Null" /> 
@@ -56,10 +51,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="compile">
-        <mkdir dir="${build}/modules/autoload"/>
+        <mkdir dir="netbeans/modules/autoload"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="${build}/modules/autoload/openide-io.jar"
+        <locjar jarfile="netbeans/modules/autoload/openide-io.jar"
                 manifest="manifest-subst.mf"
                 basedir="src"
 	        excludesfile="${nb_all}/nbbuild/standard-jar-excludes.txt"
@@ -69,17 +64,13 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars">
-      <genlist outputfiledir="${build}" module="modules/autoload/openide-io.jar">
-          <fileset dir="${build}">
-	      <patternset refID="openide/io.files"/>
-          </fileset>
-      </genlist>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="nbm" depends="netbeans">
         <makenbm file="openide-io.nbm"
-                 productDir="${build}"
-                 module="modules/autoload/openide-io.jar"
+                 topdir="."
+                 module="netbeans/modules/autoload/openide-io.jar"
                  homepage="http://java.${homepage.base}/"
                  distribution="http://${dist.base}/openide-io.nbm">
             <license file="${license.file}"/>
@@ -173,12 +164,11 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="src">
                 <include name="**/*.class"/>
             </fileset>
-            <fileset dir="${build}">
-	        <patternset refID="openide/io.files"/>
-            </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="openide-io.nbm"/>
+        <delete dir="netbeans"/>
+        <delete dir="Info"/>
         <delete dir="javadoc"/>
     </target>
   
