--- a/spi.debugger.ui/build.xml
+++ b/spi.debugger.ui/build.xml
@@ -18,14 +18,9 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
-
-  <patternset id="debuggercore.files">
-    <include name="modules/autoload/debuggerCore.jar"/>
-  </patternset>
 
   <target name="setup-jdkhome-1">
     <!-- Note: user-configured -Djavahome=... will always override this: -->
@@ -49,21 +44,21 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
         <pathelement location="${jdkhome}/lib/tools.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-io.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-compiler.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
+        <pathelement location="../openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
+        <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
+        <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
       </classpath>
     </javac>
   </target>
   <target name="jars" depends="compile">
-    <mkdir dir="${build}/modules/autoload"/>
+    <mkdir dir="netbeans/modules/autoload"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
-    <locjar jarfile="${build}/modules/autoload/debuggerCore.jar"
+    <locjar jarfile="netbeans/modules/autoload/debuggerCore.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -74,36 +69,30 @@ Microsystems, Inc. All Rights Reserved.
 
    
   <target name="netbeans" depends="jars">
-      <genlist outputfiledir="${build}" module="modules/autoload/debuggerCore.jar">
-          <fileset dir="${build}">
-	      <patternset refID="debuggercore.files"/>
-          </fileset>
-      </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="debuggercore.nbm"
-             productDir="${build}"
-             module="modules/autoload/debuggerCore.jar"
+             topdir="."
+             module="netbeans/modules/autoload/debuggerCore.jar"
 	     homepage="http://debuggercore.${homepage.base}/"
 	     distribution="http://${dist.base}/debuggercore.nbm">
       <license file="${license.file}"/>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
   </target>
-
   <target name="clean">
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="debuggercore.files"/>
-      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="debuggercore.nbm"/>
+    <delete dir="netbeans"/>
     <delete dir="javadoc"/>
+    <delete dir="Info"/>
   </target>
 
   <target name="javadoc" depends="setup-jdkhome" description="Build debuggercore module API documentation.">
