--- a/usersguide/build.xml
+++ b/usersguide/build.xml
@@ -18,26 +18,17 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
-  <patternset id="usersguide.files">
-    <include name="modules/usersguide.jar"/>
-    <include name="modules/docs/usersguide.jar"/>
-    <include name="docs/org/netbeans/modules/usersguide/ide.css"/>
-    <include name="sources/org/netbeans/examples/lib/timerbean/**"/>
-    <include name="beans/TimerBean.jar"/>
-  </patternset>
-
   <target name="compile">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <fileset dir="${build}/lib">
+        <fileset dir="../openide/netbeans/lib">
           <include name="openide*.jar" />
         </fileset>
       </classpath>
@@ -58,10 +49,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="tojar">
-    <mkdir dir="${build}/modules"/>
+    <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/usersguide.jar"
+    <locjar jarfile="netbeans/modules/usersguide.jar"
             manifest="manifest-subst.mf"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false"
@@ -71,7 +62,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release">
-    <copy todir="${build}">
+    <copy todir="netbeans">
       <fileset dir="release"/>
     </copy>
   </target>
@@ -87,8 +78,8 @@ Microsystems, Inc. All Rights Reserved.
       <exclude name="pending.html"/>
       <exclude name="ja/"/>
     </jhindexer>
-    <mkdir dir="${build}/modules/docs"/>
-    <locjar jarfile="${build}/modules/docs/usersguide.jar"
+    <mkdir dir="netbeans/modules/docs"/>
+    <locjar jarfile="netbeans/modules/docs/usersguide.jar"
 	    compress="true">
       <fileset dir="javahelp" excludesfile="../nbbuild/standard-jar-excludes.txt">
         <!-- Temporary files, or preprocessing scripts: -->
@@ -102,22 +93,18 @@ Microsystems, Inc. All Rights Reserved.
       </fileset>
       <locale name="ja"/>
     </locjar>
-    <mkdir dir="${build}/docs/org/netbeans/modules/usersguide"/>
-    <copy file="javahelp/org/netbeans/modules/usersguide/ide.css" tofile="${build}/docs/org/netbeans/modules/usersguide/ide.css"/>
+    <mkdir dir="netbeans/docs/org/netbeans/modules/usersguide"/>
+    <copy file="javahelp/org/netbeans/modules/usersguide/ide.css" tofile="netbeans/docs/org/netbeans/modules/usersguide/ide.css"/>
   </target>
 
   <target name="netbeans" depends="jars,release,javahelp">
-      <genlist outputfiledir="${build}" module="modules/usersguide.jar">
-          <fileset dir="${build}">
-	      <patternset refID="usersguide.files"/>
-          </fileset>
-      </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="usersguide.nbm"
-             productDir="${build}"
-             module="modules/usersguide.jar"
+             topdir="."
+             module="netbeans/modules/usersguide.jar"
 	     homepage="http://usersguide.${homepage.base}/"
 	     distribution="http://${dist.base}/usersguide.nbm">
       <license file="${license.file}"/>
@@ -128,15 +115,14 @@ Microsystems, Inc. All Rights Reserved.
   <target name="clean">
     <delete file="manifest-subst.mf"/>
     <delete file="usersguide.nbm"/>
+    <delete dir="netbeans"/>
+    <delete dir="Info"/>
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
       <fileset dir="demosrc">
         <include name="**/*.class"/>
-      </fileset>
-      <fileset dir="${build}">
-        <patternset refID="usersguide.files"/>
       </fileset>
     </delete>
     <delete dir="javahelp/org/netbeans/modules/usersguide/JavaHelpSearch2"/>
