--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -25,7 +25,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -35,10 +34,6 @@ Microsystems, Inc. All Rights Reserved.
 
     <property name="build.compiler.debug" value="on"/>
 
-    <patternset id="xml/catalog.files">
-        <include name="modules/xml-catalog.jar"/>
-	<include name="modules/ext/resolver-1_1_nb.jar"/>
-    </patternset>
 
     <target name="init">
         <property file="${xml_root}/spec-vers.properties"/>
@@ -53,8 +48,8 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compiling XML catalog module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
-                <pathelement location="${build}/lib/openide.jar"/>
-                <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+                <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
+                <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
                 <fileset dir="${nbroot}/core/external">
                     <include name="xml-apis*.jar"/>
                 </fileset>
@@ -70,10 +65,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="init,compile">
-        <mkdir dir="${build}/modules"/>
+        <mkdir dir="netbeans/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="${build}/modules/xml-catalog.jar"
+        <locjar jarfile="netbeans/modules/xml-catalog.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
@@ -83,8 +78,8 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="release" depends="init">
-        <mkdir dir="${build}/modules/ext"/>
-        <copy file="${nbroot}/xml/external/resolver-1_1_nb.jar" tofile="${build}/modules/ext/resolver-1_1_nb.jar"/>
+        <mkdir dir="netbeans/modules/ext"/>
+        <copy file="${nbroot}/xml/external/resolver-1_1_nb.jar" tofile="netbeans/modules/ext/resolver-1_1_nb.jar"/>
     </target>
 
     <target name="javahelp">
@@ -92,11 +87,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
-      <genlist outputfiledir="${build}" module="modules/xml-catalog.jar">
-          <fileset dir="${build}">
-	      <patternset refID="xml/catalog.files"/>
-          </fileset>
-      </genlist>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
     
     <target name="reload" depends="init,compile" description="Test module inside running IDE (API Support with Ant required).">
@@ -112,9 +103,9 @@ Microsystems, Inc. All Rights Reserved.
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
         <makenbm file="../xml-catalog.nbm"
-                 productDir="${build}"
+                 topdir="."
                  needsrestart="false"
-                 module="modules/xml-catalog.jar"
+                 module="netbeans/modules/xml-catalog.jar"
                  homepage="http://xml.${homepage.base}/catalog/"
                  distribution="http://${dist.base}/xml-catalog.nbm">
             <license file="${license.file}"/>
@@ -132,9 +123,6 @@ Microsystems, Inc. All Rights Reserved.
         <delete>
             <fileset dir="src">
                 <include name="**/*.class"/>
-            </fileset>
-            <fileset dir="${build}">
-	        <patternset refID="xml/catalog.files"/>
             </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
