--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -26,7 +26,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -36,12 +35,6 @@ Microsystems, Inc. All Rights Reserved.
 
     <property name="build.compiler.debug" value="on"/>
 
-    <patternset id="xml/core.files">
-        <include name="modules/autoload/xml-core.jar"/>
-	<include name="modules/autoload/docs/xml-core.jar"/>
-	<include name="modules/xml.jar"/>
-	<include name="modules/xml-syntax.jar"/>
-    </patternset>
 
     <target name="init">
         <property file="${xml_root}/spec-vers.properties"/>
@@ -56,10 +49,10 @@ Microsystems, Inc. All Rights Reserved.
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
                 <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-                <pathelement location="${build}/lib/openide.jar"/>
-                <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-                <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
-                <pathelement location="${build}/modules/autoload/openide-io.jar"/>
+                <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
+                <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+                <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
+                <pathelement location="${nbroot}/openide/io/netbeans/modules/autoload/openide-io.jar"/>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
                 <fileset dir="${nbroot}/core/external">
@@ -67,19 +60,21 @@ Microsystems, Inc. All Rights Reserved.
                 </fileset>
             </classpath>
         </javac>
+
+        <for-each locations="compat"/>
     </target>
 
     <target name="jars" depends="init,compile">
-        <mkdir dir="${build}/modules"/>
+        <mkdir dir="netbeans/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="${build}/modules/autoload/xml-core.jar"
+        <locjar jarfile="netbeans/modules/autoload/xml-core.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <fileset dir="compat/src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
-        </locjar>    
+        </locjar>
     </target>
 
     <target name="release">
@@ -94,8 +89,8 @@ Microsystems, Inc. All Rights Reserved.
             <exclude name="JavaHelpSearch/"/>
         </jhindexer>
 
-        <mkdir dir="${build}/modules/docs"/>
-        <locjar jarfile="${build}/modules/autoload/docs/xml-core.jar"
+        <mkdir dir="netbeans/modules/docs"/>
+        <locjar jarfile="netbeans/modules/autoload/docs/xml-core.jar"
                 compress="true">
             <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
@@ -103,11 +98,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
-      <genlist outputfiledir="${build}" module="modules/autoload/xml-core.jar">
-          <fileset dir="${build}">
-	      <patternset refID="xml/core.files"/>
-          </fileset>
-      </genlist>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     
@@ -126,9 +117,9 @@ Microsystems, Inc. All Rights Reserved.
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
         <makenbm file="../xml-core.nbm"
-                 productDir="${build}"
+                 topdir="."
                  needsrestart="false"
-                 module="modules/autoload/xml-core.jar"
+                 module="netbeans/modules/autoload/xml-core.jar"
                  homepage="http://xml.${homepage.base}/core/"
                  distribution="http://${dist.base}/xml-core.nbm">
             <license file="${license.file}"/>
@@ -138,15 +129,14 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="clean">
         <delete>
-          <fileset dir="src">
-              <include name="**/*.class"/>
-          </fileset>
-          <fileset dir="${build}">
-	      <patternset refID="xml/core.files"/>
-          </fileset>
+            <fileset dir="src">
+                <include name="**/*.class"/>
+            </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="../xml-core.nbm"/>
+        <delete dir="netbeans"/>
+        <delete dir="Info"/>
         <delete dir="javahelp/org/netbeans/modules/xml/core/docs/JavaHelpSearch"/>
 
         <for-each locations="compat"/>
