--- a/xml.schema/build.xml
+++ b/xml.schema/build.xml
@@ -26,7 +26,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -36,9 +35,6 @@ Microsystems, Inc. All Rights Reserved.
 
     <property name="build.compiler.debug" value="on"/>
 
-    <patternset id="xml/schema.files">
-        <include name="modules/xml-schema.jar"/>
-    </patternset>
 
     <target name="init">
         <property file="${xml_root}/spec-vers.properties"/>
@@ -54,7 +50,7 @@ Microsystems, Inc. All Rights Reserved.
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
                 <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-                <fileset dir="${build}/lib">
+                <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
                 <pathelement location="${tax_lib_root}/src/"/>
@@ -68,10 +64,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="init,compile">
-        <mkdir dir="${build}/modules"/>
+        <mkdir dir="netbeans/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="${build}/modules/xml-schema.jar"
+        <locjar jarfile="netbeans/modules/xml-schema.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
@@ -84,11 +80,7 @@ Microsystems, Inc. All Rights Reserved.
 
 
     <target name="netbeans" depends="jars,release">
-      <genlist outputfiledir="${build}" module="modules/xml-schema.jar">
-          <fileset dir="${build}">
-	      <patternset refID="xml/schema.files"/>
-          </fileset>
-      </genlist>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
    
     <target name="javahelp" description="Please use xml/core javahelp target instead." />
@@ -107,9 +99,9 @@ Microsystems, Inc. All Rights Reserved.
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
         <makenbm file="../xml-schema.nbm"
-                 productDir="${build}"
+                 topdir="."
                  needsrestart="false"
-                 module="modules/xml-schema.jar"
+                 module="netbeans/modules/xml-schema.jar"
                  homepage="http://xml.${homepage.base}/schema/"
                  distribution="http://${dist.base}/xml-schema.nbm">
             <license file="${license.file}"/>
@@ -122,12 +114,11 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="src">
                 <include name="**/*.class"/>
             </fileset>
-            <fileset dir="${build}">
-	        <patternset refID="xml/schema.files"/>
-            </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="../xml-schema.nbm"/>
+        <delete dir="netbeans"/>
+        <delete dir="Info"/>
         <delete dir="javahelp/org/netbeans/modules/xml/core/docs/JavaHelpSearch"/>
 
     </target>
