--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -27,7 +27,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="nbm_alias" value="nb_ide"/>
-    <property name="build" location="../nbbuild/netbeans"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext_root}/nbantext.jar"/>
@@ -35,12 +34,6 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext_root}/nbantext.jar"/>
 
     <property name="build.compiler.debug" value="on"/>
-
-    <patternset id="xml/tools.files">
-        <include name="modules/xml-tools.jar"/>
-	<include name="docs/xml-apis.zip"/>
-	<include name="system/ParserDB/xml-apis.jc*"/>
-    </patternset>
 
 
     <target name="init">
@@ -55,9 +48,9 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compiling XML tools module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
-                <pathelement location="${build}/lib/openide.jar"/>
-                <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-                <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
+                <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
+                <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+                <pathelement location="${nbroot}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
                 <fileset dir="${nbroot}/core/external">
                     <include name="xml-apis*.jar"/>
                 </fileset>
@@ -69,10 +62,10 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="jars" depends="init,compile">
-        <mkdir dir="${build}/modules"/>
+        <mkdir dir="netbeans/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="${build}/modules/xml-tools.jar"
+        <locjar jarfile="netbeans/modules/xml-tools.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
@@ -82,7 +75,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="release">
-        <copy todir="${build}" includeEmptyDirs="false">
+        <copy todir="netbeans" includeEmptyDirs="false">
             <fileset dir="release" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
         </copy>
     </target>
@@ -92,11 +85,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
-      <genlist outputfiledir="${build}" module="modules/xml-tools.jar">
-          <fileset dir="${build}">
-	      <patternset refID="xml/tools.files"/>
-          </fileset>
-      </genlist>
+        <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
     <target name="reload" depends="init,compile" description="Test module inside running IDE (API Support with Ant required).">
@@ -113,9 +102,9 @@ Microsystems, Inc. All Rights Reserved.
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
         <makenbm file="../xml-tools.nbm"
-                 productDir="${build}"
+                 topdir="."
                  needsrestart="false"
-                 module="modules/xml-tools.jar"
+                 module="netbeans/modules/xml-tools.jar"
                  homepage="http://xml.${homepage.base}/tools/"
                  distribution="http://${dist.base}/xml-tools.nbm">
             <license file="${license.file}"/>
@@ -128,12 +117,11 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="src">
                 <include name="**/*.class"/>
             </fileset>
-            <fileset dir="${build}">
-	      <patternset refID="xml/tools.files"/>
-            </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
         <delete file="../xml-tools.nbm"/>
+        <delete dir="netbeans"/>
+        <delete dir="Info"/>
     </target>
 
     <target name="real-clean" depends="clean">
